# polymarket-market-maker

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml
bot/: __init__.py  config.py  constants.py  state.py
core/: __init__.py  client.py  merger.py  websocket.py
data/: __init__.py  market_data.py  sheets.py  updater.py
docs/: BEGINNER_GUIDE.md  SETUP_GUIDE.md  SHEETS_TEMPLATE.md  TROUBLESHOOTING.md
trading/: __init__.py  order_manager.py  position_manager.py  risk_manager.py  strategy.py
utils/: logger.py  math_utils.py  retry.py
