[project]
name = "polymarket-market-maker"
version = "1.0.0"
description = "Advanced Polymarket market-making bot with real-time WebSockets and risk management"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "py-clob-client>=0.28.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "gspread>=6.0.0",
    "gspread-dataframe>=4.0.0",
    "websockets>=12.0",
    "eth-account>=0.13.0",
    "web3>=7.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "sortedcontainers>=2.4.0",
    "google-auth>=2.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
asyncio_mode = "auto"